--- a/style.css
+++ b/style.css
@@ -1,52 +1,54 @@
 body {
-  margin: 0;
-  padding: 0;
+  background-color: #000;
+  color: #fff;
   font-family: 'Arial', sans-serif;
-  background-color: black;
-  color: white;
   text-align: center;
+  margin: 0;
+  padding: 20px;
 }
 
 .page {
-  padding: 20px;
+  display: none;
+}
+
+.page:not(.hidden) {
+  display: block;
 }
 
 .hidden {
   display: none;
 }
 
-#countdown {
-  font-size: 2em;
-  margin: 20px;
+#startBtn,
+button {
+  background-color: #fff;
+  color: #000;
+  padding: 10px 20px;
+  font-weight: bold;
+  cursor: pointer;
+  border: none;
+  margin-top: 20px;
 }
 
-button {
-  padding: 10px 20px;
-  font-size: 1em;
-  margin-top: 20px;
+button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
 }
 
 #checkpointAccess {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-}
-
-input[type="password"] {
-  padding: 8px;
-  font-size: 1em;
-  margin-right: 5px;
-}
-
-.video-container {
-  position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
   margin-top: 20px;
 }
 
-.video-container iframe {
-  position: absolute;
-  width: 100%;
-  height: 100%;
+input[type="password"] {
+  padding: 10px;
+  margin: 10px;
+}
+
+.video-container {
+  margin-top: 20px;
+}
+
+.info-text {
+  margin-top: 10px;
+  font-style: italic;
 }
